[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mezzosayshi"
version = "0.0.5"
description = "Mezzo says hi 👋"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.15.2",
]

[project.scripts]
mezzosayshi = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
build = [
    "shiv>=1.0.8",
]
dev = [
    "ruff>=0.11.0",
]
